Fix header layout shift (#7025)

--- a/web/html/src/branding/css/base/theme.less
+++ b/web/html/src/branding/css/base/theme.less
@@ -37,6 +37,7 @@ header {
 
   .header-content {
     padding: 12px 10px;
+    height: 50px;
   }
 
   a {
